--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,13 +37,15 @@ endorsed.classpath=
 excludes=
 file.reference.gradient-icon-font.jar=gradient-icon-font.jar
 file.reference.miglayout-4.0.jar=miglayout-4.0.jar
+file.reference.mysql-connector-j-8.0.31.jar=D:\\Certus-FullStack\\Modulo4-FundamentosDeJava\\Librerias\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31.jar
 file.reference.TimingFramework-0.55.jar=TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.TimingFramework-0.55.jar}:\
     ${file.reference.gradient-icon-font.jar}:\
-    ${file.reference.miglayout-4.0.jar}
+    ${file.reference.miglayout-4.0.jar}:\
+    ${file.reference.mysql-connector-j-8.0.31.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
