--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,7 +40,9 @@ file.reference.miglayout-4.0.jar=miglayout-4.0.jar
 file.reference.mysql-connector-j-8.0.31.jar=D:\\Certus-FullStack\\Modulo4-FundamentosDeJava\\Librerias\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31.jar
 file.reference.TimingFramework-0.55.jar=TimingFramework-0.55.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.TimingFramework-0.55.jar}:\
     ${file.reference.gradient-icon-font.jar}:\
@@ -81,11 +83,28 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Store-Mega
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=Vistas.VistaPrincipal
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_19
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
