Login - Usuarios - Ventas

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ dist.jlink.output=${dist.jlink.dir}/Store-Mega
 endorsed.classpath=
 excludes=
 file.reference.gradient-icon-font.jar=gradient-icon-font.jar
+file.reference.itext5-itextpdf-5.5.12.jar=src\\conector\\itext5-itextpdf-5.5.12.jar
 file.reference.miglayout-4.0.jar=miglayout-4.0.jar
 file.reference.mysql-connector-j-8.0.31.jar=D:\\Certus-FullStack\\Modulo4-FundamentosDeJava\\Librerias\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31.jar
 file.reference.TimingFramework-0.55.jar=TimingFramework-0.55.jar
@@ -47,7 +48,9 @@ javac.classpath=\
     ${file.reference.TimingFramework-0.55.jar}:\
     ${file.reference.gradient-icon-font.jar}:\
     ${file.reference.miglayout-4.0.jar}:\
-    ${file.reference.mysql-connector-j-8.0.31.jar}
+    ${file.reference.mysql-connector-j-8.0.31.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.itext5-itextpdf-5.5.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -92,7 +95,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=Vistas.VistaPrincipal
+main.class=Vistas.FormLogin
 # Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
 manifest.custom.application.library.allowable.codebase=
 # Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
